bugfix setup docker

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,11 @@
 # SERVER
-HOST=127.0.0.1
+HOST=
 PORT=9000
 
 # DATABASE - MYSQL
 MYSQL_USERNAME=root
 MYSQL_PASSWORD=
-MYSQL_HOST=127.0.0.1
+MYSQL_HOST=host.docker.internal
 MYSQL_PORT=3306
 MYSQL_DBNAME=todo
 
