--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ HOST=
 PORT=9000
 
 # DATABASE - MYSQL
-MYSQL_USERNAME=root
+MYSQL_USER=root
 MYSQL_PASSWORD=
 MYSQL_HOST=host.docker.internal
 MYSQL_PORT=3306
