--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,13 +3,13 @@ version: '3.7'
 services:
   chi-todo:
     container_name: chi-todo
-    image: chi-todo:1.3.1
+    image: chi-todo:1.4
     ports:
       - 9000:9000
     environment:
       - API_URL=:9000
-      - MYSQL_USERNAME=root
+      - MYSQL_USER=root
       - MYSQL_PASSWORD=
       - MYSQL_HOST=host.docker.internal
       - MYSQL_PORT=3306
-      - MYSQL_DBNAME=todo
+      - MYSQL_DBNAME=todo1
